# AdventOfCode

./: .gitignore
2021/rust/day1/: Cargo.toml
2021/rust/day1/input/: depths.json
2021/rust/day1/src/: main.rs  part1.rs  part2.rs
2021/rust/day2/: Cargo.toml
2021/rust/day2/input/: moves.json  test.json
2021/rust/day2/src/: part1.rs  part2.rs
2021/rust/day3/: Cargo.toml
2021/rust/day3/input/: inputs.json
2021/rust/day3/src/: processor.rs
2022/rust/: Cargo.toml
2022/rust/day1/src/: input.rs  main.rs
2022/rust/day2/src/: main.rs  play.rs
2022/rust/src/: elfgroup.rs  input.rs  lib.rs  rucksack.rs  station_assignment.rs
2023/Python/: .gitignore
2023/Python/day_1/: day_1_solution.py  performance.md
2023/Python/day_10/: day_10_solution.py
2023/Python/day_2/: day_2_solution.py  performance.md
2023/Python/day_3/: day_3_solution.py  performance.md
2023/Python/day_4/: day_4_solution.py
2023/Python/day_5/: day_5_solution.py  performance.md
2023/Python/day_6/: day_6_solution.py  performance.md
2023/Python/day_7/: day_7_solution.py  performance.md
2023/Python/day_9/: day_9_solution.py  performance.md
2023/kotlin/Day1/src/: Part1.kt  Part2.kt
2023/kotlin/Day10/src/: GridParser.kt  Part1.kt  Part2.kt
2023/kotlin/Day11/src/: GalaxyParser.kt  Part1.kt  Part2.kt
2023/kotlin/Day12/src/: Part1.kt  Part2.kt
2023/rust/: Cargo.toml
2023/rust/day1/: Cargo.toml
2023/rust/day2/: Cargo.toml
2023/rust/day3/: Cargo.toml
2023/rust/day4/: Cargo.toml
2023/rust/day5/: Cargo.toml
2023/rust/day5/src/: maps.rs  part1.rs  part2.rs
(+46 files in other folders)
